--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                 <div class="image"> <img src=""></div>
             </div>
             <div class="event-visualizer-body">
-                <div class="event-head">Warning !</div>
-                <div class="event-body">An error has occured while creating template.An error has occured while creating
-                    template.An error has occured while creating template.An error has occured while creating template.
+                <div class="event-head"></div>
+                <div class="event-body">
                 </div>
                 <div class="event-button">
 
@@ -27,8 +26,8 @@
             </div>
         </div>
     </div>
-
-    <div class="home">
+    <div class="head-banner" style="display: none">
+        <div class="home">
             <div class="primary-para">
                     <div class="para-heading">
                             Ideology
@@ -47,7 +46,15 @@
             Copy the script tag <div><span class="url">&lt;script src="JS/main.js"&gt;&lt;/script&gt;</span></div> to try or <div class="download">DOWNLOAD</div>
         </div>
     </div>
-    <div class="sample-container">
+    </div>
+    <div class="loader" style="">
+        <div class="inner one"></div>
+        <div class="inner two"></div>
+        <div class="inner three"></div>
+      </div>
+      
+
+    <div class="sample-container"style="display: none" >
         <div class="heading">
             <div class="heading-text">BASIC
                 <div class="round-border">
@@ -95,7 +102,7 @@
 
     </div>
 
-    <div class="sample-container">
+    <div class="sample-container"style="display: none">
         <div class="heading">
             <div class="heading-text">ADDING BUTTONS
                 <div class="round-border">
